--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -20,7 +20,7 @@
     <div class="card"></div>
   </div>
   <footer>
-  <p>Created with ♥ by <span class="name">Charlie J</span></p>
+  <p>Created with ♥ by <span class="name">Charles J</span></p>
   </footer>
   <script src="file:///Users/charlesjewell/Documents/fundamentals/wdi-fundamentals-memorygame/starter-code/main.js"></script>
 </body>
